# models/contact.js
@@ -1,12 +1,11 @@
-// models/contact.js
 const mongoose = require('mongoose');
 
 const contactSchema = new mongoose.Schema({
-  firstName:   { type: String, required: true },
-  lastName:    { type: String },
-  email:       { type: String, required: true },
+  firstName: { type: String, required: true },
+  lastName: { type: String, required: true },
+  email: { type: String, required: true },
   favoriteColor: { type: String },
-  birthday:    { type: Date }
+  birthday: { type: Date }
 });
 
 module.exports = mongoose.model('Contact', contactSchema);
