# models/temple.js
@@ -2,10 +2,9 @@ const mongoose = require('mongoose');
 
 const templeSchema = new mongoose.Schema({
   name: { type: String, required: true },
-  location: { type: String, required: true },
+  location: { type: String },
   dedicated: { type: Date },
-  area: { type: String },
-  services: { type: [String] }
+  area: { type: String }
 });
 
 module.exports = mongoose.model('Temple', templeSchema);
